infra/k8s/tms/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tms
  labels:
    app.kubernetes.io/part-of: tms
